update docs, build readme

--- a/.verb.md
+++ b/.verb.md
@@ -10,6 +10,35 @@
 var bullets = require('{%= name %}');
 ```
 
+## Example
+
+**Roman numerals**
+
+```js
+var list = [
+  {text: 'Item a...', lvl: 0}, 
+  {text: 'Item b...', lvl: 1}, 
+  {text: 'Item c...', lvl: 2},
+  {text: 'Item d...', lvl: 2},
+  {text: 'Item e...', lvl: 2},
+];
+
+// let's generate 100 numerals, in case our list grows.
+var actual = bullets(list, {chars: '1..100'}, function (ch) {
+  return romanize(ch) + '.';
+});
+```
+
+Results in:
+
+```
+I. Item a...
+  II. Item b...
+    III. Item c...
+    III. Item d...
+    III. Item e...
+```
+
 ## API
 {%= apidocs("index.js") %}
 
@@ -35,3 +64,6 @@ Pull requests and stars are always welcome. For bugs and feature requests, [plea
 ***
 
 {%= include("footer") %}
+
+[list-item]: https://github.com/jonschlinkert/list-item
+[expand-range]: https://github.com/jonschlinkert/expand-range
