--- a/.verb.md
+++ b/.verb.md
@@ -1,6 +1,8 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
+
+## Install
 
 {%= include("install-npm", {save: true}) %}
 
@@ -59,7 +61,7 @@ Pull requests and stars are always welcome. For bugs and feature requests, [plea
 
 ## License
 {%= copyright() %}
-{%= license() %}
+{%= license %}
 
 ***
 
